--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -476,8 +476,8 @@
 		"message": "Blokkolva"
 	},
 	"blocking_category_whitelisted": {
-		"description": "as in '5 (trackers) WHITELISTED'",
-		"message": "Engedélyezett"
+		"description": "as in '5 (trackers) TRUSTED'",
+		"message": "Megbízható"
 	},
 	"panel_email_verification_sent": {
 		"message": "$BOLD_HTML_STARTS$ Sikerült! $BOLD_HTML_END$ Egy fiókhitelesítő emailt küldtünk a(z) $EMAIL$ emailcímre",
@@ -779,8 +779,8 @@
 		"message": "Ezt az oldalt eltávolítottuk a Korlátozott oldalak listájáról és hozzáadtuk a Megbízható oldalak listájához."
 	},
 	"whitelist_error_duplicate_url": {
-		"description": "Options page site whitelisting error message shown when whitelisting a URL that is already in the whitelist.",
-		"message": "Ez az oldal már a fehérlistán van."
+		"description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
+		"message": "Ez a webhely már megbízható."
 	},
 	"settings_adblocker": {
 		"message": "Hirdetésblokkolási listák"
@@ -1125,16 +1125,16 @@
 		"message": "Töltse újra az oldalt a változások megtekintéséhez."
 	},
 	"alert_site_trusted": {
-		"message": "Az oldal fehérlistára téve. A trackerek engedélyezve lesznek és az Anti-Tracking (követés tiltása) ki lesz kapcsolva ezen az oldalon."
+		"message": "A webhely megbízható. A nyomkövetők engedélyezve lesznek, és a követés elleni védelem ki lesz kapcsolva ezen a webhelyen."
 	},
 	"alert_site_trusted_off": {
-		"message": "Az oldal nem szerepel többé a fehérlistán."
+		"message": "A webhely már nem megbízható."
 	},
 	"alert_site_restricted": {
-		"message": "Oldal feketelistára téve. A trackerek blokkolva lesznek és az Anti-Tracking (követés tiltása) be lesz kapcsolva ezen az oldalon."
+		"message": "A webhely korlátozva van. A nyomkövetők le lesznek tiltva, és a követés elleni védelem be lesz kapcsolva ezen a webhelyen."
 	},
 	"alert_site_restricted_off": {
-		"message": "Az oldal nem szerepel többé a feketelistán."
+		"message": "A webhely már nincs korlátozva."
 	},
 	"tooltip_anti_track_on": {
 		"message": "A személyes adatpontok névtelenítve."
@@ -1366,6 +1366,9 @@
 	"hub_upgrade_additional_protection": {
 		"message": "További védelem"
 	},
+	"hub_upgrade_maximum_protection": {
+		"message": "Maximális védelem"
+	},
 	"hub_upgrade_browser_tracker_blocking": {
 		"message": "Követés blokkolása a böngészőben"
 	},
@@ -1586,7 +1589,7 @@
 		"message": "Oldalak megbízhatónak állítása és korlátozása"
 	},
 	"hub_tutorial_trust_tagline": {
-		"message": "Tegyen weboldalakat fehér- vagy feketelistára egyetlen kattintással."
+		"message": "Egyetlen kattintással megbízhatóként vagy korlátozottként állíthat be webhelyeket."
 	},
 	"hub_tutorial_trust_trust_site": {
 		"message": "Trackerek engedélyezése mindig az oldalon."
@@ -1722,6 +1725,9 @@
 	"hub_create_account_label_password_invalid_length": {
 		"message": "8–50 karaktert használjon."
 	},
+	"hub_create_account_confirm_password_do_not_match": {
+		"message": "A jelszavak nem egyeznek."
+	},
 	"hub_create_account_already_have_account": {
 		"message": "Már van Ghostery fiókja?"
 	},
@@ -1733,6 +1739,225 @@
 	},
 	"hub_create_account_toast_error": {
 		"message": "Az e-mail cím már használatban van. Kérjük, válasszon másik."
+	},
+	"ghostery_dawn_onboarding_toast_fix_errors": {
+		"message": "A továbblépés előtt javítsa ki a hibákat."
+	},
+	"ghostery_dawn_onboarding_install_heading": {
+		"message": "A Ghostery Dawn telepítése folyamatban..."
+	},
+	"ghostery_dawn_onboarding_page_title": {
+	  "message": "Ghostery Dawn-központ – Üdvözöljük"
+	},
+  	"ghostery_dawn_onboarding_header_title_login": {
+	  "message": "Ghostery Dawn-központ – Bejelentkezés"
+	},
+	"ghostery_dawn_onboarding_header_title_block_settings": {
+	  "message": "Ghostery Dawn-központ – Letiltás beállításai"
+	},
+	"ghostery_dawn_onboarding_header_title_search_choice": {
+	  "message": "Ghostery Dawn-központ – Keresési lehetőségek"
+	},
+	"ghostery_dawn_onboarding_header_title_plan_choices": {
+	  "message": "Ghostery Dawn-központ – Csomagokkal kapcsolatos lehetőségek"
+	},
+	"ghostery_dawn_onboarding_privacy": {
+		"message": "Adatvédelem"
+	},
+	"ghostery_dawn_onboarding_search": {
+		"message": "Keresés"
+	},
+	"ghostery_dawn_onboarding_plan": {
+		"message": "Terv"
+	},
+	"ghostery_dawn_onboarding_welcome": {
+		"message": "Üdvözli a Ghostery Dawn!"
+	},
+	"ghostery_dawn_onboarding_lets_begin": {
+		"message": "A jól ismert technológiáinkat újakkal integrálva központosítottuk az online adatvédelmet."
+	},
+	"ghostery_dawn_onboarding_welcome_message": {
+		"message": "A böngésző megvédi az Ön adatait, és blokkolja a bloatware-eket, hogy biztonságosan több mint 3-szer olyan gyorsan böngészhessen, mintha Chrome-ot használna."
+	},
+	"ghostery_dawn_onboarding_lets_do_this": {
+		"message": "A böngésző beállítása"
+	},
+	"ghostery_dawn_onboarding_your_privacy_plan": {
+		"message": "Az Ön adatvédelmi csomagja"
+	},
+	"ghostery_dawn_onboarding_based_on_your_privacy_preferences": {
+		"message": "Adatvédelmi beállításai alapján"
+	},
+	"ghostery_dawn_onboarding_ad_free_with_ghostery_plus_subscription": {
+		"message": "Hirdetésmentes a Ghostery Plus-előfizetéssel"
+	},
+	"ghostery_dawn_onboarding_ad_free_promo": {
+		"message": "40% kedvezmény az első 12 hónapban"
+	},
+	"ghostery_dawn_onboarding_ad_free_promo_description": {
+		"message": "Gyorsabban elérheti a kívánt tartalmakat. A Plus-előfizetéssel támogathatja a Ghosteryt abban, hogy hirdetésmentes böngészési élményt nyújtson önnek."
+	},
+	"ghostery_dawn_onboarding_or": {
+		"message": "VAGY"
+	},
+	"ghostery_dawn_onboarding_keep": {
+		"message": "Megtartás"
+	},
+	"ghostery_dawn_onboarding_upgrade": {
+		"message": "Frissítés"
+	},
+	"ghostery_dawn_onboarding_start_trial": {
+		"message": "Próbaidőszak megkezdése"
+	},
+	"ghostery_dawn_onboarding_see_all_plans": {
+		"message": "Az összes csomag megtekintése"
+	},
+	"ghostery_dawn_onboarding_private_search": {
+		"message": "Privát keresés"
+	},
+	"ghostery_dawn_onboarding_tracker_protection": {
+		"message": "Nyomkövetők elleni védelem"
+	},
+	"ghostery_dawn_onboarding_speedy_page_loads": {
+		"message": "Gyors lapbetöltések"
+	},
+	"ghostery_dawn_onboarding_intelligence_technology": {
+		"message": "Intelligens technológia"
+	},
+	"ghostery_dawn_onboarding_ad_free": {
+		"message": "Hirdetésmentes"
+	},
+	"ghostery_dawn_onboarding_supports_ghosterys_mission": {
+		"message": "Támogassa a Ghostery küldetését"
+	},
+	"ghostery_dawn_onboarding_unlimited_bandwidth": {
+		"message": "Korlátlan sávszélesség"
+	},
+	"ghostery_dawn_onboarding_already_premium_subscriber": {
+		"message": "Ön már Premium-előfizető"
+	},
+	"ghostery_dawn_onboarding_already_plus_subscriber": {
+		"message": "Ön már Plus-előfizető"
+	},
+	"ghostery_dawn_onboarding_keep_your_current_plan_or_upgrade": {
+		"message": "Tartsa meg vagy bővítse jelenlegi csomagját"
+	},
+	"ghostery_dawn_onboarding_choose_an_option": {
+		"message": "Válasszon egy lehetőséget"
+  },
+	"ghostery_dawn_onboarding_create_a_ghostery_account": {
+		"message": "Ghostery-fiók létrehozása"
+	},
+	"ghostery_dawn_onboarding_sync_settings": {
+		"message": "Lehetővé teszi az adatvédelmi beállítások szinkronizálását több eszközön."
+	},
+	"ghostery_dawn_onboarding_already_have_account": {
+		"message": "Már van fiókom."
+	},
+	"ghostery_dawn_onboarding_skip": {
+		"message": "Konténer"
+	},
+	"ghostery_dawn_onboarding_back": {
+		"message": "Vissza"
+	},
+	"ghostery_dawn_onboarding_we_take_your_privacy_very_seriously": {
+		"message": "Fontos számunkra az adatai védelme. További információ"
+	},
+	"ghostery_dawn_onboarding_private_by_design": {
+		"message": "Beépített adatvédelem"
+	},
+	"ghostery_dawn_onboarding_private_by_design_description": {
+		"message": "A Ghostery számára nagyon fontos az Ön adatainak védelme, ezért az adatvédelmi szabályzatunk rendkívül szigorú. Amikor létrehoz egy Ghostery-fiókot, csak a nevét és az e-mail-címét gyűjtjük. Ezen adatok teszik lehetővé, hogy beállításait szinkronizálhassa eszközein, és tájékoztathassuk a fontos frissítésekről. Adatait semmilyen körülmények között nem osztjuk meg vagy értékesítjük harmadik feleknek."
+	},
+	"ghostery_dawn_onboarding_can_i_remove_my_account": {
+		"message": "Eltávolíthatom a fiókomat?"
+	},
+	"ghostery_dawn_onboarding_can_i_remove_my_account_description": {
+		"message": "Reméljük, hogy elégedett a Ghosteryvel, de ha úgy dönt, hogy megszünteti a fiókját, a kérelme benyújtásától számított 90 napon belül eltávolítjuk az összes személyes adatát."
+	},
+	"ghostery_dawn_onboarding_visit_our_privacy_policy": {
+		"message": "További információkért tekintse meg Adatvédelmi szabályzatunkat"
+	},
+	"ghostery_dawn_onboarding_create_an_account": {
+		"message": "Hozzon létre fiókot."
+	},
+	"ghostery_dawn_onboarding_you_are_signed_in_as": {
+		"message": "Bejelentkezett felhasználó:"
+	},
+	"ghostery_dawn_onboarding_youve_successfully_set_up_your_browser": {
+		"message": "Sikeresen beállította a böngészőjét."
+	},
+	"ghostery_dawn_onboarding_surf_with_ease": {
+		"message": "Mostantól egyszerűen böngészhet a weben."
+	},
+	"ghostery_dawn_onboarding_start_browsing": {
+		"message": "Böngészés megkezdése"
+	},
+	"ghostery_dawn_onboarding_which_privacy_plan": {
+		"message": "Melyik adatvédelmi csomag a legmegfelelőbb Önnek?"
+	},
+	"ghostery_dawn_onboarding_tell_us_your_preferences": {
+		"message": "Ossza meg velünk az igényeit, mi pedig ezek alapján javaslatot teszünk Önnek."
+	},
+	"ghostery_dawn_onboarding_recommended_choices": {
+		"message": "Javasolt választási lehetőségek"
+	},
+	"ghostery_dawn_onboarding_question_block_ads": {
+		"message": "Szeretné letiltani a hirdetéseket?"
+	},
+	"ghostery_dawn_onboarding_question_kinds_of_trackers": {
+		"message": "Milyen típusú nyomkövetőket szeretne letiltani?"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_all": {
+		"message": "Az összes nyomkövetőt"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_none": {
+		"message": "Egyetlen nyomkövetőt sem"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_ad_and_analytics": {
+		"message": "Az összes hirdetési és elemzési nyomkövetőt"
+	},
+	"ghostery_dawn_onboarding_question_anti_tracking": {
+		"message": "Szeretné bekapcsolni a követés elleni védelmet?"
+	},
+	"ghostery_dawn_onboarding_question_smart_browsing": {
+		"message": "Szeretné bekapcsolni az intelligens böngészést?"
+	},
+	"ghostery_dawn_onboarding_info_blocking_all": {
+		"message": "Ha „az összes nyomkövetőt” letiltja, előfordulhat, hogy bizonyos webhelyek nem fognak megfelelően működni."
+	},
+	"ghostery_dawn_onboarding_info_anti_tracking": {
+		"message": "A követés elleni védelmi funkció anonimizálja az egyedileg azonosítható adatokat, amelyeket a nyomkövetők gyűjteni próbálnak."
+	},
+	"ghostery_dawn_onboarding_info_smart_browsing": {
+		"message": "Az intelligens böngészési funkció úgy módosítja a letiltási beállításokat, hogy kevesebbszer forduljon elő betöltési hiba, és a lapok gyorsabban töltődjenek be."
+	},
+	"ghostery_dawn_onboarding_ad_free_private_search": {
+		"message": "Hirdetésmentes privát keresés"
+	},
+	"ghostery_dawn_onboarding_recommended" : {
+	  "message": "(Ajánlott)"
+	},
+	"ghostery_dawn_onboarding_ad_supported_private_search": {
+		"message": "Hirdetéseket engedélyező privát keresés"
+	},
+	"ghostery_dawn_onboarding_type_in_search_domain": {
+		"message": "Írja be a keresési tartományt"
+	},
+	"ghostery_dawn_onboarding_go_back": {
+		"message": "Vissza"
+	},
+	"ghostery_dawn_onboarding_confirm": {
+		"message": "Megerősítés"
+	},
+	"ghostery_dawn_onboarding_other": {
+		"message": "Egyéb"
+	},
+	"ghostery_dawn_onboarding_toast_success": {
+		"message": "Sikeres:"
+	},
+	"ghostery_dawn_onboarding_toast_alert": {
+		"message": "Hiba:"
 	},
 	"enable_when_paused": {
 		"message": "E funkció használatához térjen vissza a Ghostery-hez."
@@ -2033,6 +2258,9 @@
 	"next": {
 		"message": "Következő"
 	},
+	"next_or_start_trial": {
+		"message": "Tovább vagy próbaidőszak megkezdése"
+	},
 	"previous": {
 		"message": "Előző"
 	},
@@ -2053,6 +2281,9 @@
 	},
 	"password_colon": {
 		"message": "Jelszó:"
+	},
+	"confirm_password_colon": {
+		"message": "Jelszó megerősítése:"
 	},
 	"please_enter_a_valid_email": {
 		"message": "Kérjük, érvényes emailcímet adjon meg."
@@ -2158,7 +2389,7 @@
 		"message": "Beépített VPN"
 	},
 	"custom_whitelist_options": {
-		"message": "engedélyezett egyéni"
+		"message": "Egyéni megbízható webhely beállításai"
 	},
 	"historical_tracking_insights": {
 		"message": "Naplózott követési statisztika"
@@ -2177,5 +2408,41 @@
 	},
 	"too_many_failed_logins_text": {
 		"message": "Túl sok sikertelen bejelentkezés. Próbálja újra egy óra múlva."
+	},
+  	"choose_your_default_search": {
+		"message": "Válassza ki az alapértelmezett keresőt"
+	},
+  	"pick_a_default_search_engine": {
+	  "message": "Válassza ki az alapértelmezett keresőmotort a kereséseihez."
+	},
+  	"ghostery_dawn_hub_blocking_settings_view_toast_error_message": {
+	  "message": "Kérjük, minden kérdésre válaszoljon"
+	},
+  	"ghostery_dawn_onboarding_startpage_warning": {
+	  "message": "Fontos tudnivaló: A StartPage keresőmotorja nem gyűjti az Ön adatait. Azonban annak érdekében, hogy ingyenes adatvédelmi szolgáltatást tudjon nyújtani, nem célzott, privát hirdetéseket jelenít meg Önnek."
+	},
+	"ghostery_dawn_onboarding_bing_warning": {
+	  "message": "Fontos tudnivaló: A Bing keresőmotorja naplózza az Ön adatait, és azok alapján célzott hirdetéseket jelenít meg Önnek."
+	},
+	"ghostery_dawn_onboarding_yahoo_warning": {
+	  "message": "Fontos tudnivaló: A Yahoo keresőmotorja naplózza az Ön adatait, és azok alapján célzott hirdetéseket jelenít meg Önnek."
+	},
+  	"ghostery_dawn_onboarding_glow_benefit": {
+	  "message": "A Plus-előfizetéssel kihasználhatja a világszerte elsőként elérhető hirdetésmentes privát keresést. Speciális, cookie nélküli bejelentkezési rendszerünkkel keresései teljes mértékben bizalmasak maradhatnak."
+	},
+  	"ghostery_dawn_onboarding_choose_alternate_search": {
+	  "message": "Másodlagos kereső kiválasztása"
+	},
+  	"ghostery_dawn_onboarding_select_option": {
+	  "message": "Válasszon egy lehetőséget"
+	},
+  	"ghostery_dawn_onboarding_you_have_selected_an_alternate_search_engine": {
+	  "message": "Kiválasztott egy másodlagos keresőmotort:"
+	},
+  	"ghostery_dawn_onboarding_create_account_for_trial": {
+	  "message": "A Ghostery Search ingyenes próbaidőszakának megkezdéséhez jelentkezzen be, vagy hozzon létre egy fiókot. Ennek segítségével szinkronizálhatja az adatvédelmi beállításait az eszközein."
+	},
+  	"ghostery_dawn_onboarding_back_to_search_selection": {
+	  "message": "Vissza a keresési lehetőségek kiválasztásához"
 	}
 }
