--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -476,8 +476,8 @@
 		"message": "ブロックされた対象"
 	},
 	"blocking_category_whitelisted": {
-		"description": "as in '5 (trackers) WHITELISTED'",
-		"message": "ホワイトリストに登録済み"
+		"description": "as in '5 (trackers) TRUSTED'",
+		"message": "信頼済み"
 	},
 	"panel_email_verification_sent": {
 		"message": "$BOLD_HTML_STARTS$成功しました！$BOLD_HTML_END$ $EMAIL$にアカウント確認メールが送信されました",
@@ -779,8 +779,8 @@
 		"message": "このサイトは、制限されたサイトのリストから削除され、信頼できるサイトのリストに追加されました。"
 	},
 	"whitelist_error_duplicate_url": {
-		"description": "Options page site whitelisting error message shown when whitelisting a URL that is already in the whitelist.",
-		"message": "このサイトは既にホワイトリストに登録されています。"
+		"description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
+		"message": "このサイトは既に信頼済みになっています。"
 	},
 	"settings_adblocker": {
 		"message": "広告ブロック・リスト"
@@ -1125,16 +1125,16 @@
 		"message": "変更を確認するには、リロードしてください。"
 	},
 	"alert_site_trusted": {
-		"message": "サイトがホワイトリストに登録されました。このサイトで、トラッカーは許可され、追跡防止は無効になります。"
+		"message": "このサイトは信頼済みサイトです。このサイトでは、トラッカーを使用することができます。追跡防止機能は無効になっています。"
 	},
 	"alert_site_trusted_off": {
-		"message": "サイトがホワイトリストから削除されました。"
+		"message": "このサイトは信頼済みサイトではありません。"
 	},
 	"alert_site_restricted": {
-		"message": "サイトがブラックリストに登録されました。このサイトで、トラッカーはブロックされ、追跡防止は有効になります。"
+		"message": "このサイトは制限されています。このサイトでは、トラッカーは使用できません。追跡防止機能は有効になっています。"
 	},
 	"alert_site_restricted_off": {
-		"message": "サイトがブラックリストから削除されました。"
+		"message": "このサイトは制限付きサイトではありません。"
 	},
 	"tooltip_anti_track_on": {
 		"message": "個人データポイントが匿名化されました。"
@@ -1366,6 +1366,9 @@
 	"hub_upgrade_additional_protection": {
 		"message": "追加の保護"
 	},
+	"hub_upgrade_maximum_protection": {
+		"message": "最高レベルの保護"
+	},
 	"hub_upgrade_browser_tracker_blocking": {
 		"message": "ブラウザのトラッカーブロッキング"
 	},
@@ -1586,7 +1589,7 @@
 		"message": "信頼または制限のあるサイト"
 	},
 	"hub_tutorial_trust_tagline": {
-		"message": "ワンクリックでホワイトリストやブラックリストに登録"
+		"message": "ワン・クリックで、信頼済みサイトと制限付きサイトを切り替えることができます。"
 	},
 	"hub_tutorial_trust_trust_site": {
 		"message": "サイトでトラッカーを常に許可します。"
@@ -1722,6 +1725,9 @@
 	"hub_create_account_label_password_invalid_length": {
 		"message": "8～50文字を使用してください。"
 	},
+	"hub_create_account_confirm_password_do_not_match": {
+		"message": "パスワードが一致しません。"
+	},
 	"hub_create_account_already_have_account": {
 		"message": "既にGhosteryアカウントを持っていますか？"
 	},
@@ -1733,6 +1739,225 @@
 	},
 	"hub_create_account_toast_error": {
 		"message": "そのメールアドレスは既に使用されています。  別のメールアドレスを選択してください。"
+	},
+	"ghostery_dawn_onboarding_toast_fix_errors": {
+		"message": "エラーを修正してから操作を続行してください。"
+	},
+	"ghostery_dawn_onboarding_install_heading": {
+		"message": "Ghostery Dawnをインストールしています..."
+	},
+	"ghostery_dawn_onboarding_page_title": {
+	  "message": "Ghostery Dawnハブ - ようこそ"
+	},
+  	"ghostery_dawn_onboarding_header_title_login": {
+	  "message": "Ghostery Dawnハブ - ログイン"
+	},
+	"ghostery_dawn_onboarding_header_title_block_settings": {
+	  "message": "Ghostery Dawnハブ - ブロックの設定"
+	},
+	"ghostery_dawn_onboarding_header_title_search_choice": {
+	  "message": "Ghostery Dawnハブ - 検索の選択"
+	},
+	"ghostery_dawn_onboarding_header_title_plan_choices": {
+	  "message": "Ghostery Dawnハブ - プランの選択"
+	},
+	"ghostery_dawn_onboarding_privacy": {
+		"message": "プライバシー"
+	},
+	"ghostery_dawn_onboarding_search": {
+		"message": "検索"
+	},
+	"ghostery_dawn_onboarding_plan": {
+		"message": "プラン"
+	},
+	"ghostery_dawn_onboarding_welcome": {
+		"message": "Ghostery Dawnへようこそ"
+	},
+	"ghostery_dawn_onboarding_lets_begin": {
+		"message": "各種の署名と技術を統合したことにより、オンライン・プライバシーを一元的に管理できるようになりました。"
+	},
+	"ghostery_dawn_onboarding_welcome_message": {
+		"message": "当社のブラウザはお客様のデータを保護し、ブロートウェアをブロックします。ネット・サーフィンをプライベートにお楽しみいただけるほか、Chromeと比べて2倍以上も高速です。"
+	},
+	"ghostery_dawn_onboarding_lets_do_this": {
+		"message": "ブラウザをセットアップ"
+	},
+	"ghostery_dawn_onboarding_your_privacy_plan": {
+		"message": "プライバシー・プラン"
+	},
+	"ghostery_dawn_onboarding_based_on_your_privacy_preferences": {
+		"message": "プライバシー設定に基づく"
+	},
+	"ghostery_dawn_onboarding_ad_free_with_ghostery_plus_subscription": {
+		"message": "Ghostery Plusサブスクリプションなら広告は表示されません"
+	},
+	"ghostery_dawn_onboarding_ad_free_promo": {
+		"message": "最初の12か月間は40%オフ"
+	},
+	"ghostery_dawn_onboarding_ad_free_promo_description": {
+		"message": "必要なものにすばやくアクセスできます。Plusサブスクリプションをご利用になると、Ghosteryで広告がブロックされるようになります。"
+	},
+	"ghostery_dawn_onboarding_or": {
+		"message": "または"
+	},
+	"ghostery_dawn_onboarding_keep": {
+		"message": "保持"
+	},
+	"ghostery_dawn_onboarding_upgrade": {
+		"message": "アップグレード"
+	},
+	"ghostery_dawn_onboarding_start_trial": {
+		"message": "試用版を開始"
+	},
+	"ghostery_dawn_onboarding_see_all_plans": {
+		"message": "すべてのプランを見る"
+	},
+	"ghostery_dawn_onboarding_private_search": {
+		"message": "プライベート検索"
+	},
+	"ghostery_dawn_onboarding_tracker_protection": {
+		"message": "トラッカー保護"
+	},
+	"ghostery_dawn_onboarding_speedy_page_loads": {
+		"message": "高速なページ読み込み"
+	},
+	"ghostery_dawn_onboarding_intelligence_technology": {
+		"message": "インテリジェンス・テクノロジー"
+	},
+	"ghostery_dawn_onboarding_ad_free": {
+		"message": "広告なし"
+	},
+	"ghostery_dawn_onboarding_supports_ghosterys_mission": {
+		"message": "Ghosteryのミッションをサポート"
+	},
+	"ghostery_dawn_onboarding_unlimited_bandwidth": {
+		"message": "無制限の帯域幅"
+	},
+	"ghostery_dawn_onboarding_already_premium_subscriber": {
+		"message": "既にGhostery Premiumに登録されています"
+	},
+	"ghostery_dawn_onboarding_already_plus_subscriber": {
+		"message": "既にGhostery Plusに登録されています"
+	},
+	"ghostery_dawn_onboarding_keep_your_current_plan_or_upgrade": {
+		"message": "現在のプランを引き続き使用することも、アップグレードすることもできます"
+	},
+	"ghostery_dawn_onboarding_choose_an_option": {
+		"message": "オプションを選択"
+  },
+	"ghostery_dawn_onboarding_create_a_ghostery_account": {
+		"message": "Ghosteryアカウントを作成"
+	},
+	"ghostery_dawn_onboarding_sync_settings": {
+		"message": "プライバシー設定をデバイス間で同期することができます。"
+	},
+	"ghostery_dawn_onboarding_already_have_account": {
+		"message": "既にアカウントを持っています。"
+	},
+	"ghostery_dawn_onboarding_skip": {
+		"message": "スキップ"
+	},
+	"ghostery_dawn_onboarding_back": {
+		"message": "戻る"
+	},
+	"ghostery_dawn_onboarding_we_take_your_privacy_very_seriously": {
+		"message": "当社はお客様のプライバシー保護に真摯に取り組んでいます。詳細はこちら"
+	},
+	"ghostery_dawn_onboarding_private_by_design": {
+		"message": "プライバシー・バイ・デザイン"
+	},
+	"ghostery_dawn_onboarding_private_by_design_description": {
+		"message": "Ghosteryでは、プライバシーを非常に重視しています。そのため、お客様のデータに対しては、非常に制限の厳しいポリシーを適用しています。お客様がGhosteryでアカウントを作成する際に当社が収集するデータは、お客様のユーザー名とメール・アドレスだけです。これらのデータは、デバイス間での設定の同期や、重要な更新情報を通知する場合などに使用されます。いかなる場合においても、お客様のデータを第三者と共有したり第三者に販売したりすることはありません。"
+	},
+	"ghostery_dawn_onboarding_can_i_remove_my_account": {
+		"message": "自分のアカウントを削除することはできますか？"
+	},
+	"ghostery_dawn_onboarding_can_i_remove_my_account_description": {
+		"message": "Ghosteryの使用を停止する場合は、お客様から連絡を受けた日から90日以内に、お客様のすべての個人情報をこちらで削除いたします。"
+	},
+	"ghostery_dawn_onboarding_visit_our_privacy_policy": {
+		"message": "詳しくは、当社のプライバシー・ポリシーをご確認ください。"
+	},
+	"ghostery_dawn_onboarding_create_an_account": {
+		"message": "アカウントを作成してください。"
+	},
+	"ghostery_dawn_onboarding_you_are_signed_in_as": {
+		"message": "あなたは、次のユーザーとしてサインインしています："
+	},
+	"ghostery_dawn_onboarding_youve_successfully_set_up_your_browser": {
+		"message": "ブラウザが正常に設定されました。"
+	},
+	"ghostery_dawn_onboarding_surf_with_ease": {
+		"message": "これで、ネット・サーフィンが大幅に容易になります。"
+	},
+	"ghostery_dawn_onboarding_start_browsing": {
+		"message": "閲覧を開始"
+	},
+	"ghostery_dawn_onboarding_which_privacy_plan": {
+		"message": "自分に合ったプライバシー・プランをお選びください。"
+	},
+	"ghostery_dawn_onboarding_tell_us_your_preferences": {
+		"message": "ご希望があれば、お客様に推奨プランをご提案いたします。"
+	},
+	"ghostery_dawn_onboarding_recommended_choices": {
+		"message": "推奨プラン"
+	},
+	"ghostery_dawn_onboarding_question_block_ads": {
+		"message": "広告をブロックしますか？"
+	},
+	"ghostery_dawn_onboarding_question_kinds_of_trackers": {
+		"message": "どのトラッカーをブロックしますか？"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_all": {
+		"message": "すべてのトラッカー"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_none": {
+		"message": "トラッカーをブロックしない"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_ad_and_analytics": {
+		"message": "すべての広告と分析トラッカー"
+	},
+	"ghostery_dawn_onboarding_question_anti_tracking": {
+		"message": "追跡防止機能を有効にしますか？"
+	},
+	"ghostery_dawn_onboarding_question_smart_browsing": {
+		"message": "スマート・ブラウジング機能を有効にしますか？"
+	},
+	"ghostery_dawn_onboarding_info_blocking_all": {
+		"message": "すべてのトラッカーをブロックすると、一部のウェブサイトで障害が発生する可能性があります。"
+	},
+	"ghostery_dawn_onboarding_info_anti_tracking": {
+		"message": "トラッカーは、一意に識別可能なデータを収集しますが、追跡防止機能を有効にすると、こうしたデータが匿名化され、一意に識別できなくなります。"
+	},
+	"ghostery_dawn_onboarding_info_smart_browsing": {
+		"message": "スマート・ブラウジング機能を有効にすると、ブロック設定が調整され、ページ破損の発生率が低下し、ページの読み込み速度が上がります。"
+	},
+	"ghostery_dawn_onboarding_ad_free_private_search": {
+		"message": "広告なしのプライベート検索"
+	},
+	"ghostery_dawn_onboarding_recommended" : {
+	  "message": "（推奨）"
+	},
+	"ghostery_dawn_onboarding_ad_supported_private_search": {
+		"message": "広告ありのプライベート検索"
+	},
+	"ghostery_dawn_onboarding_type_in_search_domain": {
+		"message": "検索ドメインを入力"
+	},
+	"ghostery_dawn_onboarding_go_back": {
+		"message": "戻る"
+	},
+	"ghostery_dawn_onboarding_confirm": {
+		"message": "確認"
+	},
+	"ghostery_dawn_onboarding_other": {
+		"message": "その他"
+	},
+	"ghostery_dawn_onboarding_toast_success": {
+		"message": "成功："
+	},
+	"ghostery_dawn_onboarding_toast_alert": {
+		"message": "エラー："
 	},
 	"enable_when_paused": {
 		"message": "この機能を使用するには、Ghosteryを再開してください。"
@@ -2033,6 +2258,9 @@
 	"next": {
 		"message": "次へ"
 	},
+	"next_or_start_trial": {
+		"message": "次に進む、または試用版を開始する"
+	},
 	"previous": {
 		"message": "前へ"
 	},
@@ -2053,6 +2281,9 @@
 	},
 	"password_colon": {
 		"message": "パスワード："
+	},
+	"confirm_password_colon": {
+		"message": "パスワードを確認："
 	},
 	"please_enter_a_valid_email": {
 		"message": "有効なメールアドレスを入力してください。"
@@ -2158,7 +2389,7 @@
 		"message": "組み込みVPN"
 	},
 	"custom_whitelist_options": {
-		"message": "ホワイトリストのカスタムオプション"
+		"message": "信頼済みサイトのカスタム・オプション"
 	},
 	"historical_tracking_insights": {
 		"message": "追跡履歴情報"
@@ -2177,5 +2408,41 @@
 	},
 	"too_many_failed_logins_text": {
 		"message": "ログインの失敗回数が多すぎます。1時間後にもう一度お試しください。"
+	},
+  	"choose_your_default_search": {
+		"message": "デフォルトの検索エンジンを選択"
+	},
+  	"pick_a_default_search_engine": {
+	  "message": "すべての検索で使用するデフォルトの検索エンジンを選択してください。"
+	},
+  	"ghostery_dawn_hub_blocking_settings_view_toast_error_message": {
+	  "message": "すべての質問に回答してください"
+	},
+  	"ghostery_dawn_onboarding_startpage_warning": {
+	  "message": "参考情報：スタートページの検索エンジンでデータが収集されることはありませんが、お客様のプライバシーを無料で保護する目的で、ターゲットを特定しないプライベート広告がスタートページに表示されます。"
+	},
+	"ghostery_dawn_onboarding_bing_warning": {
+	  "message": "参考情報：Bingの検索エンジンでは、ターゲットを絞った広告を表示する目的で、ユーザーのデータがログに記録されます。"
+	},
+	"ghostery_dawn_onboarding_yahoo_warning": {
+	  "message": "参考情報：Yahooの検索エンジンでは、ターゲットを絞った広告を表示する目的で、ユーザーのデータがログに記録されます。"
+	},
+  	"ghostery_dawn_onboarding_glow_benefit": {
+	  "message": "Ghostery Plusに登録すると、世界初で世界唯一の広告が表示されないプライベート検索機能を使用できるようになります 。クッキーを使用しない特別なログイン機能により、ユーザーの検索をプライベートに保ちます。"
+	},
+  	"ghostery_dawn_onboarding_choose_alternate_search": {
+	  "message": "代替の検索エンジンを選択"
+	},
+  	"ghostery_dawn_onboarding_select_option": {
+	  "message": "オプションを選択"
+	},
+  	"ghostery_dawn_onboarding_you_have_selected_an_alternate_search_engine": {
+	  "message": "代替の検索エンジンが選択されました。"
+	},
+  	"ghostery_dawn_onboarding_create_account_for_trial": {
+	  "message": "無料の試用版Ghostery Searchを使用するには、アカウントを作成するか、アカウントにログインする必要があります。これにより、デバイス間でプライバシー設定を同期できるようになります。"
+	},
+  	"ghostery_dawn_onboarding_back_to_search_selection": {
+	  "message": "検索エンジンの選択画面に戻る"
 	}
 }
