--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -476,8 +476,8 @@
 		"message": "Bloqueados"
 	},
 	"blocking_category_whitelisted": {
-		"description": "as in '5 (trackers) WHITELISTED'",
-		"message": "Colocado na lista branca"
+		"description": "as in '5 (trackers) TRUSTED'",
+		"message": "Confiável"
 	},
 	"panel_email_verification_sent": {
 		"message": "$BOLD_HTML_STARTS$ Sucesso! $BOLD_HTML_END$ Um email de verificação foi enviado para $EMAIL$",
@@ -779,8 +779,8 @@
 		"message": "Esse site foi removido de nossa lista de Sites Restritos e adicionado à sua lista de Sites Confiados."
 	},
 	"whitelist_error_duplicate_url": {
-		"description": "Options page site whitelisting error message shown when whitelisting a URL that is already in the whitelist.",
-		"message": "Esse site já está na lista branca."
+		"description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
+		"message": "Este site já é confiável."
 	},
 	"settings_adblocker": {
 		"message": "Listas de bloqueio de anúncios"
@@ -1125,16 +1125,16 @@
 		"message": "Clique para ver as mudanças."
 	},
 	"alert_site_trusted": {
-		"message": "Site na lista branca. Os rastreadores serão permitidos e o anti-rastreamento está desativado neste site."
+		"message": "Site confiável. Os rastreadores serão permitidos e o anti-rastreamento está desativado neste site."
 	},
 	"alert_site_trusted_off": {
-		"message": "O site não está mais na lista branca."
+		"message": "O site não é mais confiável."
 	},
 	"alert_site_restricted": {
-		"message": "Site na lista negra. Os rastreadores serão bloqueados e o anti-rastreamento será ativado neste site."
+		"message": "Site restrito. Os rastreadores serão bloqueados e o anti-rastreamento será ativado neste site."
 	},
 	"alert_site_restricted_off": {
-		"message": "O site não está mais na lista negra."
+		"message": "O site não é mais restrito."
 	},
 	"tooltip_anti_track_on": {
 		"message": "Pontos de dados pessoais anonimizados."
@@ -1366,6 +1366,9 @@
 	"hub_upgrade_additional_protection": {
 		"message": "Proteção adicional"
 	},
+	"hub_upgrade_maximum_protection": {
+		"message": "Proteção máxima"
+	},
 	"hub_upgrade_browser_tracker_blocking": {
 		"message": "Bloqueio de rastreadores do navegador"
 	},
@@ -1586,7 +1589,7 @@
 		"message": "Confiar e restringir sites"
 	},
 	"hub_tutorial_trust_tagline": {
-		"message": "Coloque sites em listas de permissões ou listas negras com um clique."
+		"message": "Torne sites confiáveis ou restritos com um clique."
 	},
 	"hub_tutorial_trust_trust_site": {
 		"message": "Sempre permitir rastreadores no site."
@@ -1722,6 +1725,9 @@
 	"hub_create_account_label_password_invalid_length": {
 		"message": "Use entre 8 e 50 caracteres."
 	},
+	"hub_create_account_confirm_password_do_not_match": {
+		"message": "Suas senhas não correspondem."
+	},
 	"hub_create_account_already_have_account": {
 		"message": "Você já tem uma conta Ghostery?"
 	},
@@ -1733,6 +1739,225 @@
 	},
 	"hub_create_account_toast_error": {
 		"message": "Este email já está sendo usado.  Por favor, escolha outro. "
+	},
+	"ghostery_dawn_onboarding_toast_fix_errors": {
+		"message": "Corrija os erros antes de continuar."
+	},
+	"ghostery_dawn_onboarding_install_heading": {
+		"message": "Ghostery Dawn instalando agora..."
+	},
+	"ghostery_dawn_onboarding_page_title": {
+	  "message": "Ghostery Dawn Hub - Bem-vindo"
+	},
+  	"ghostery_dawn_onboarding_header_title_login": {
+	  "message": "Ghostery Dawn Hub - Login"
+	},
+	"ghostery_dawn_onboarding_header_title_block_settings": {
+	  "message": "Ghostery Dawn Hub - Configurações de bloqueio"
+	},
+	"ghostery_dawn_onboarding_header_title_search_choice": {
+	  "message": "Ghostery Dawn Hub - Opção de busca"
+	},
+	"ghostery_dawn_onboarding_header_title_plan_choices": {
+	  "message": "Ghostery Dawn Hub - Opções de plano"
+	},
+	"ghostery_dawn_onboarding_privacy": {
+		"message": "Privacidade"
+	},
+	"ghostery_dawn_onboarding_search": {
+		"message": "Pesquisa"
+	},
+	"ghostery_dawn_onboarding_plan": {
+		"message": "Plano"
+	},
+	"ghostery_dawn_onboarding_welcome": {
+		"message": "Bem-vindo ao Ghostery Dawn!"
+	},
+	"ghostery_dawn_onboarding_lets_begin": {
+		"message": "Centralizamos a privacidade online integrando nossa assinatura e também novas tecnologias."
+	},
+	"ghostery_dawn_onboarding_welcome_message": {
+		"message": "Nosso navegador protege seus dados e bloqueia bloatwares para que você possa navegar com privacidade e 3x mais rápido que com o Chrome."
+	},
+	"ghostery_dawn_onboarding_lets_do_this": {
+		"message": "Configurar meu navegador"
+	},
+	"ghostery_dawn_onboarding_your_privacy_plan": {
+		"message": "Seu Plano de privacidade"
+	},
+	"ghostery_dawn_onboarding_based_on_your_privacy_preferences": {
+		"message": "Com base em suas preferências de privacidade"
+	},
+	"ghostery_dawn_onboarding_ad_free_with_ghostery_plus_subscription": {
+		"message": "Sem anúncios com a assinatura Ghostery Plus"
+	},
+	"ghostery_dawn_onboarding_ad_free_promo": {
+		"message": "40% de desconto nos primeiros 12 meses"
+	},
+	"ghostery_dawn_onboarding_ad_free_promo_description": {
+		"message": "Chegue ao que você quer mais rápido. Uma assinatura Plus dá ao Ghostery o apoio que precisamos para oferecer a VOCÊ uma experiência sem anúncios."
+	},
+	"ghostery_dawn_onboarding_or": {
+		"message": "OU"
+	},
+	"ghostery_dawn_onboarding_keep": {
+		"message": "Manter"
+	},
+	"ghostery_dawn_onboarding_upgrade": {
+		"message": "Fazer upgrade"
+	},
+	"ghostery_dawn_onboarding_start_trial": {
+		"message": "Começar avaliação"
+	},
+	"ghostery_dawn_onboarding_see_all_plans": {
+		"message": "Ver todos os planos"
+	},
+	"ghostery_dawn_onboarding_private_search": {
+		"message": "Busca privada"
+	},
+	"ghostery_dawn_onboarding_tracker_protection": {
+		"message": "Proteção contra rastreadores"
+	},
+	"ghostery_dawn_onboarding_speedy_page_loads": {
+		"message": "Carregamentos de página rápidos"
+	},
+	"ghostery_dawn_onboarding_intelligence_technology": {
+		"message": "Tecnologia de inteligência"
+	},
+	"ghostery_dawn_onboarding_ad_free": {
+		"message": "Sem anúncios"
+	},
+	"ghostery_dawn_onboarding_supports_ghosterys_mission": {
+		"message": "Apoia a missão do Ghostery"
+	},
+	"ghostery_dawn_onboarding_unlimited_bandwidth": {
+		"message": "Banda larga ilimitada"
+	},
+	"ghostery_dawn_onboarding_already_premium_subscriber": {
+		"message": "Você já é um Assinante Premium"
+	},
+	"ghostery_dawn_onboarding_already_plus_subscriber": {
+		"message": "Você já é um Assinante Plus"
+	},
+	"ghostery_dawn_onboarding_keep_your_current_plan_or_upgrade": {
+		"message": "Manter o plano existente ou atualizar"
+	},
+	"ghostery_dawn_onboarding_choose_an_option": {
+		"message": "Escolher uma opção"
+  },
+	"ghostery_dawn_onboarding_create_a_ghostery_account": {
+		"message": "Criar uma conta Ghostery"
+	},
+	"ghostery_dawn_onboarding_sync_settings": {
+		"message": "Permite a sincronização de suas configurações de privacidade entre dispositivos."
+	},
+	"ghostery_dawn_onboarding_already_have_account": {
+		"message": "Já tenho uma conta."
+	},
+	"ghostery_dawn_onboarding_skip": {
+		"message": "Pular"
+	},
+	"ghostery_dawn_onboarding_back": {
+		"message": "Voltar"
+	},
+	"ghostery_dawn_onboarding_we_take_your_privacy_very_seriously": {
+		"message": "Levamos sua privacidade muito a sério. Saiba mais"
+	},
+	"ghostery_dawn_onboarding_private_by_design": {
+		"message": "Privado por design"
+	},
+	"ghostery_dawn_onboarding_private_by_design_description": {
+		"message": "A privacidade é extremamente importante para nós na Ghostery. É por isso que aplicamos uma política rígida ao lidar com nossos dados. Ao criar uma conta no Ghostery, os únicos dados que coletamos são seu nome e email. Estas informações nos permitem oferecer a você uma experiência de usuário na qual você pode sincronizar suas configurações entre dispositivos e receber de nós atualizações importantes. Não compartilhamos ou vendemos estes dados com qualquer tipo de terceiro, em nenhuma circunstância."
+	},
+	"ghostery_dawn_onboarding_can_i_remove_my_account": {
+		"message": "Posso remover minha conta?"
+	},
+	"ghostery_dawn_onboarding_can_i_remove_my_account_description": {
+		"message": "Esperamos que você goste de usar o Ghostery, mas caso decida sair, removeremos todas as suas informações pessoais em até 90 dias a partir da data da solicitação."
+	},
+	"ghostery_dawn_onboarding_visit_our_privacy_policy": {
+		"message": "Acesse nossa Política de Privacidade para mais informações"
+	},
+	"ghostery_dawn_onboarding_create_an_account": {
+		"message": "Crie uma conta."
+	},
+	"ghostery_dawn_onboarding_you_are_signed_in_as": {
+		"message": "Você entrou como"
+	},
+	"ghostery_dawn_onboarding_youve_successfully_set_up_your_browser": {
+		"message": "Você configurou seu navegador com sucesso!"
+	},
+	"ghostery_dawn_onboarding_surf_with_ease": {
+		"message": "Agora você pode surfar com a maior facilidade."
+	},
+	"ghostery_dawn_onboarding_start_browsing": {
+		"message": "Comece a navegar"
+	},
+	"ghostery_dawn_onboarding_which_privacy_plan": {
+		"message": "Qual plano de privacidade é o certo para você?"
+	},
+	"ghostery_dawn_onboarding_tell_us_your_preferences": {
+		"message": "Conte-nos sobre suas preferências e apresentaremos nossa recomendação a você."
+	},
+	"ghostery_dawn_onboarding_recommended_choices": {
+		"message": "Opções recomendadas"
+	},
+	"ghostery_dawn_onboarding_question_block_ads": {
+		"message": "Você deseja bloquear anúncios?"
+	},
+	"ghostery_dawn_onboarding_question_kinds_of_trackers": {
+		"message": "Que tipos de rastreadores você deseja bloquear?"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_all": {
+		"message": "Todos os rastreadores"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_none": {
+		"message": "Nenhum rastreador"
+	},
+	"ghostery_dawn_onboarding_kinds_of_trackers_ad_and_analytics": {
+		"message": "Todos os rastreadores de anúncios e análises"
+	},
+	"ghostery_dawn_onboarding_question_anti_tracking": {
+		"message": "Você deseja ativar o anti-rastreamento?"
+	},
+	"ghostery_dawn_onboarding_question_smart_browsing": {
+		"message": "Você deseja ativar a navegação inteligente?"
+	},
+	"ghostery_dawn_onboarding_info_blocking_all": {
+		"message": "Bloquear \"todos os rastreadores\" pode causar falha em alguns sites."
+	},
+	"ghostery_dawn_onboarding_info_anti_tracking": {
+		"message": "O anti-rastreamento torna anônimos os dados exclusivamente identificáveis que os rastreadores tentam coletar."
+	},
+	"ghostery_dawn_onboarding_info_smart_browsing": {
+		"message": "A navegação inteligente ajusta suas configurações de bloqueio para diminuir a quebra e acelerar o carregamento de páginas."
+	},
+	"ghostery_dawn_onboarding_ad_free_private_search": {
+		"message": "Busca privada sem anúncios"
+	},
+	"ghostery_dawn_onboarding_recommended" : {
+	  "message": "(Recomendado)"
+	},
+	"ghostery_dawn_onboarding_ad_supported_private_search": {
+		"message": "Busca privada apoiada por anúncios"
+	},
+	"ghostery_dawn_onboarding_type_in_search_domain": {
+		"message": "Digite o domínio da busca"
+	},
+	"ghostery_dawn_onboarding_go_back": {
+		"message": "Voltar"
+	},
+	"ghostery_dawn_onboarding_confirm": {
+		"message": "Confirmar"
+	},
+	"ghostery_dawn_onboarding_other": {
+		"message": "Outro"
+	},
+	"ghostery_dawn_onboarding_toast_success": {
+		"message": "Sucesso:"
+	},
+	"ghostery_dawn_onboarding_toast_alert": {
+		"message": "Erro:"
 	},
 	"enable_when_paused": {
 		"message": "Para usar esta função, continue o Ghostery."
@@ -2033,6 +2258,9 @@
 	"next": {
 		"message": "Próximo"
 	},
+	"next_or_start_trial": {
+		"message": "Próximo ou começar avaliação"
+	},
 	"previous": {
 		"message": "Anterior"
 	},
@@ -2053,6 +2281,9 @@
 	},
 	"password_colon": {
 		"message": "Senha:"
+	},
+	"confirm_password_colon": {
+		"message": "Confirmar senha:"
 	},
 	"please_enter_a_valid_email": {
 		"message": "Digite um email válido."
@@ -2158,7 +2389,7 @@
 		"message": "VPN integrado"
 	},
 	"custom_whitelist_options": {
-		"message": "Opções de lista de permissões personalizadas"
+		"message": "Opções personalizadas de sites confiáveis"
 	},
 	"historical_tracking_insights": {
 		"message": "Insights do histórico de acompanhamento"
@@ -2177,5 +2408,41 @@
 	},
 	"too_many_failed_logins_text": {
 		"message": "Muitas falhas ao efetuar login. Tente novamente em uma hora."
+	},
+  	"choose_your_default_search": {
+		"message": "Escolha sua busca padrão"
+	},
+  	"pick_a_default_search_engine": {
+	  "message": "Escolha um mecanismo de busca padrão para todas as suas buscas."
+	},
+  	"ghostery_dawn_hub_blocking_settings_view_toast_error_message": {
+	  "message": "Responda todas as perguntas"
+	},
+  	"ghostery_dawn_onboarding_startpage_warning": {
+	  "message": "Só para você saber: o mecanismo de busca do StartPage não coleta seus dados. No entanto, para manter a proteção da privacidade gratuita, ele veicula anúncios privados e não direcionados a você."
+	},
+	"ghostery_dawn_onboarding_bing_warning": {
+	  "message": "Só para você saber: o mecanismo de busca do Bing vai registrar seus dados e usá-los para veicular anúncios direcionados a você."
+	},
+	"ghostery_dawn_onboarding_yahoo_warning": {
+	  "message": "Só para você saber: o mecanismo de busca do Yahoo vai registrar seus dados e usá-los para veicular anúncios direcionados a você."
+	},
+  	"ghostery_dawn_onboarding_glow_benefit": {
+	  "message": "Com uma assinatura Plus, você pode acessar a primeira e única busca privada sem anúncios! Usamos um login especial sem cookies para manter sua busca absolutamente privada."
+	},
+  	"ghostery_dawn_onboarding_choose_alternate_search": {
+	  "message": "Escolher busca alternativa"
+	},
+  	"ghostery_dawn_onboarding_select_option": {
+	  "message": "Selecionar opção"
+	},
+  	"ghostery_dawn_onboarding_you_have_selected_an_alternate_search_engine": {
+	  "message": "Você selecionou um mecanismo de busca alternativo:"
+	},
+  	"ghostery_dawn_onboarding_create_account_for_trial": {
+	  "message": "Para começar sua avaliação gratuita do mecanismo de busca Ghostery, você deve criar ou acessar uma conta. Isso permite que você sincronize suas configurações de privacidade entre dispositivos."
+	},
+  	"ghostery_dawn_onboarding_back_to_search_selection": {
+	  "message": "Voltar para seleção da busca"
 	}
 }
